# Versatile-Smart-Assistant

./: README.md  main.py  pyproject.toml
