[project]
name = "versatile-smart-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.5",
    "rich>=15.0.0",
]
